[7.2alpha6]

2011-06-14  Ivan Maidanski  <ivmai@mail.ru>

	* include/gc_version.h, configure.ac, doc/README: Change to
	version 7.2alpha6.
	* configure: Regenerate.

2011-05-31  Ivan Maidanski  <ivmai@mail.ru>

	* NT_STATIC_THREADS_MAKEFILE (.cpp.obj): Remove duplicate .cpp
	filename passed.
	* NT_X64_THREADS_MAKEFILE (.cpp.obj): Use lowercase file
	extension.
	* NT_X64_STATIC_THREADS_MAKEFILE (.cpp.obj): Ditto.
	* NT_MAKEFILE (.cpp.obj): Ditto.

2011-05-31  Ivan Maidanski  <ivmai@mail.ru>

	* alloc.c (GC_add_current_malloc_heap, GC_build_back_graph,
	GC_traverse_back_graph): Move prototype to gc_priv.h.
	* checksums.c (GC_page_was_ever_dirty): Ditto.
	* dbg_mlc.c (GC_default_print_heap_obj_proc): Ditto.
	* dyn_load.c (GC_parse_map_entry, GC_get_maps,
	GC_segment_is_thread_stack, GC_roots_present, GC_is_heap_base,
	GC_get_next_stack): Ditto.
	* finalize.c (GC_reset_finalizer_nested,
	GC_check_finalizer_nested): Ditto.
	* gcj_mlc.c (GC_start_debugging, GC_store_debug_info): Ditto.
	* malloc.c (GC_extend_size_map, GC_text_mapping): Ditto.
	* mark_rts.c (GC_mark_thread_local_free_lists): Ditto.
	* misc.c (GC_register_main_static_data, GC_init_win32,
	GC_setpagesize, GC_init_linux_data_start,
	GC_set_and_save_fault_handler, GC_init_dyld, GC_init_netbsd_elf,
	GC_initialize_offsets, GC_bl_init, GC_do_blocking_inner,
	GC_bl_init_no_interiors): Ditto.
	* os_dep.c (GC_greatest_stack_base_below, GC_push_all_stacks):
	Ditto.
	* reclaim.c (GC_check_leaked): Ditto.
	* win32_threads.c (GC_gww_dirty_init): Ditto.
	* darwin_stop_world.c (GC_is_mach_marker, GC_mprotect_stop,
	GC_mprotect_resume): Move prototype to darwin_stop_world.h.
	* pthread_support.c (GC_FindTopOfStack): Ditto.
	* dyn_load.c (GC_cond_add_roots): Merge adjacent definitions.
	* mark.c (GC_page_was_ever_dirty): Remove (as already declared).
	* mark_rts.c (GC_roots_present): Change return type to void
	pointer (to match the prototype); return NULL instead of FALSE.